--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.16.4",
     "mocha": "^3.1.2",
     "request": "^2.75.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "winston": "^2.3.0"
   }
 }
